[package]
name = "bittorrent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
clap = { version = "4.5.31", features = ["derive"] }
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
kanal = "0.1.1"
memmap2 = "0.9.5"
reqwest = "0.12.12"
sha1 = "0.11.0-pre.5"
sha2 = "0.11.0-pre.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_bencode = "0.2.4"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = "0.7.13"